# travel_agent

./: README.md  fly.toml  pyproject.toml
.chainlit/: config.toml
src/: external_model.py  mock_data.py
src/app/: main.py
src/instructions/: __init__.py  agents_instructions.py  orchestrator_instructions.py
src/models/: Flight.py  Hotel.py
src/my_agents/: __init__.py  booking_agent.py  destination_agent.py  explore_agent.py
src/tools/: __init__.py  get_flights.py  get_hotels.py  get_native_lang.py
